codex-rs/tui_app_server/src/chatwidget/snapshots/codex_tui_app_server__chatwidget__tests__plan_implementation_popup.snap
---
source: tui_app_server/src/chatwidget/tests.rs
assertion_line: 2456
expression: popup
---
  Implement this plan?

› 1. Yes, implement this plan  Enter the execution phase and start coding.
  2. No, stay in Plan mode     Continue planning with the model.

  Press enter to confirm or esc to go back
