codex-rs/tui_app_server/src/chatwidget/snapshots/codex_tui_app_server__chatwidget__tests__plan_review_live_transcript.snap
---
source: tui_app_server/src/chatwidget/tests.rs
expression: rendered
---
• Plan review Reviewing the plan with a reviewer subagent.
  Reviewer ran command: rg plan_review

Activities
  • Reviewer ran command: rg plan_review

Reasoning
  Checking backward compatibility impact.

Reviewer output
  Need a rollback plan before shipping.
