codex-rs/tui_app_server/src/chatwidget/snapshots/codex_tui_app_server__chatwidget__tests__ultra_work_execution_prompt_no_selected.snap
---
source: tui_app_server/src/chatwidget/tests.rs
expression: popup
---
  Start Ultra Work execution?

  1. Yes, start Ultra Work   Enter Ultra Work execution and start coding.
› 2. No, stay in Ultra Work  Continue planning in Ultra Work.

  Press enter to confirm or esc to go back
